--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <!-- page info -->
     <div id="pageinfo">
-      <h1>Current View URL</h1>
+      <h1>Hello world</h1>
       <div><input id="urlbox" type="text"></div>
 
       <h1>Usage</h1>
